# tonapi-rs

./: Cargo.toml  LICENSE  README.md  build.rs
.openapi-generator/: FILES
codegen/: Cargo.toml  README.md
codegen/.openapi-generator/: FILES
codegen/docs/: Account.md  AccountAddress.md  AccountStaking.md  AccountStorageInfo.md  Accounts.md  Action.md  AddressParse200Response.md  ApyHistory.md  BlockCurrencyCollection.md  BlockLimits.md  BlockParamLimits.md  BlockchainAccountInspectMethodsInner.md  BlockchainBlock.md  BlockchainBlocks.md  BlockchainConfig.md  BlockchainConfig10.md  BlockchainConfig12.md  BlockchainConfig17.md  BlockchainConfig18.md  BlockchainConfig24.md  BlockchainConfig29.md  BlockchainConfig31.md  BlockchainConfig40.md  BlockchainConfig44.md  BlockchainConfig7.md  BlockchainRawAccount.md  ComputePhase.md  ConfigProposalSetup.md  ConnectApi.md  CreditPhase.md  DecodedMessageExtInMsgDecodedWalletHighloadV2.md  DecodedMessageExtInMsgDecodedWalletV4.md  DecodedRawMessage.md  DepositStakeAction.md  DnsApi.md  DnsExpiringItemsInner.md  DomainBid.md  DomainNames.md  EmulateMessageToWalletRequest.md  EmulationApi.md  (+50 more)
docs/: AccountEvent.md  AccountInfoByStateInit.md  BlockchainApi.md  BlockchainBlock.md  BlockchainConfig11.md  BlockchainConfig13.md  BlockchainConfig15.md  BlockchainConfig16.md  BlockchainConfig18StoragePricesInner.md  BlockchainConfig79.md  BlockchainConfig8.md  BlockchainConfig9.md  DnsRecord.md  DomainBids.md  DomainInfo.md  ElectionsDepositStakeAction.md  ElectionsRecoverStakeAction.md  EmulateMessageToEventRequest.md  FoundAccountsAddressesInner.md  GetAccountsRequest.md  GetAllRawShardsInfo200Response.md  GetBlockchainBlockDefaultResponse.md  GetChartRates200Response.md  GetRawBlockProof200ResponseStepsInnerLiteServerBlockLinkForward.md  GetRawMasterchainInfo200Response.md  GetRawTime200Response.md  GetStakingPoolHistory200Response.md  GetWalletBackup200Response.md  InitStateRaw.md  JettonMintAction.md  JettonsApi.md  JettonsBalances.md  Message.md  NftApi.md  NftItem.md  NftItemTransferAction.md  NftPurchaseAction.md  Oracle.md  OracleBridgeParams.md  PoolImplementationType.md  (+12 more)
examples/: get_account.rs  get_nfts.rs  get_transactions.rs  rest_api.rs  sse.rs  sse_api.rs  ws.rs  ws_api.rs
generated-tonapi/: README.md
generated-tonapi/.openapi-generator/: FILES
generated-tonapi/docs/: AccStatusChange.md  AccountStakingInfo.md  AccountsApi.md  ActionPhase.md  AuctionBidAction.md  BlockCurrencyCollectionOtherInner.md  BlockRaw.md  BlockchainApi.md  BlockchainBlock.md  BlockchainBlockShardsShardsInner.md  BlockchainConfig21.md  Error.md  (+27 more)
src/: lib.rs  rest_api.rs  stream_api.rs
tonapi-rust/: Cargo.toml
(+522 files in other folders)
