[package]
name = "tonapi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK designed to access the TonAPI REST endpoints"
repository = "https://github.com/liketurbo/tonapi-rs"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "web-programming::http-client"]
keywords = ["blockchain", "ton", "tonapi"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }

[build-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
walkdir = "2"

[dev-dependencies]
tokio = { version = "1.34", features = ["full"] }