[package]
name = "tonapi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust SDK designed to access the TonAPI REST endpoints"
repository = "https://github.com/liketurbo/tonapi-rs"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "web-programming::http-client"]
keywords = ["blockchain", "ton", "tonapi"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
reqwest = { version = "^0.11", features = ["json", "multipart"] }
reqwest-eventsource = "0.5"
futures = "0.3.29"
anyhow = "1.0.75"
async-recursion = "1.0.5"
tokio = "1.34.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
futures-util = "0.3.29"
log = "0.4.20"

[build-dependencies]
reqwest = { version = "^0.11", features = ["blocking"] }
walkdir = "2"

[dev-dependencies]
tokio = { version = "1.34", features = ["full"] }