[package]
name = "tonapi"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "SDK for integrating TonAPI into Rust apps"
repository = "https://github.com/liketurbo/tonapi-rs"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "web-programming::http-client"]
keywords = ["blockchain", "ton", "tonapi"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "^2.0"
reqwest = { version = "^0.11", features = ["json", "multipart"] }
reqwest-eventsource = "^0.5"
futures = "^0.3"
anyhow = "^1.0"
async-recursion = "^1.0"
tokio = "^1.34"
tokio-tungstenite = { version = "^0.20", features = ["native-tls"] }
futures-util = "^0.3"
log = "^0.4"
form_urlencoded = "^1.2"
tonlib = "^0.11"

[dev-dependencies]
tokio = { version = "^1.34", features = ["full"] }
simple_logger = "^4.3"